--- a/hugo.yml
+++ b/hugo.yml
@@ -17,7 +17,7 @@ params:
     enabled: true
     title: "Hi 👋🏼 I'm Brian Ardiles 🧑🏽‍💻"
     subtitle: "Backend dev turned tech lead. Problem solver, tech enthusiast, always learning."
-    imageUrl: "https://pbs.twimg.com/profile_images/952366469337243648/PQuBmtf2.jpg"
+    imageUrl: "https://i.imgur.com/EPJVDbC.jpeg"
     imageTitle: "profile photo"
     imageWidth: 170
     imageHeight: 170
