--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/plausible-hugo"]
 	path = themes/plausible-hugo
 	url = https://github.com/divinerites/plausible-hugo.git
+[submodule "plausible-hugo"]
+	path = plausible-hugo
+	url = https://github.com/divinerites/plausible-hugo.git
