--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -33,16 +33,12 @@ jobs:
         run: sudo snap install dart-sass
 
       - name: Checkout del código
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 0
+        uses: actions/checkout@v4.2.1
 
       - name: Configurar GitHub Pages
         id: pages
         uses: actions/configure-pages@v5
 
-      # ➕ Cache para módulos de Hugo
       - name: Cache de hugo_modules
         uses: actions/cache@v4
         with:
@@ -51,7 +47,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-hugo-${{ env.HUGO_VERSION }}-
 
-      # ➕ Cache para dependencias npm (si las usás)
       - name: Cache de npm
         uses: actions/cache@v4
         with:
@@ -63,7 +58,7 @@ jobs:
       - name: Instalar dependencias Node.js
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
 
-      - name: Build con Hugo
+      - name: Construir con Hugo
         env:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
@@ -74,7 +69,7 @@ jobs:
             --baseURL "${{ steps.pages.outputs.base_url }}/"
 
       - name: Subir artefacto para Pages
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3.0.1
         with:
           path: ./public
 
@@ -85,6 +80,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy a GitHub Pages
+      - name: Desplegar en GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4.0.5
