--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -65,8 +65,7 @@ jobs:
         run: |
           hugo \
             --gc \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --minify
 
       - name: Subir artefacto para Pages
         uses: actions/upload-pages-artifact@v3.0.1
