--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -65,7 +65,8 @@ jobs:
         run: |
           hugo \
             --gc \
-            --minify
+            --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
 
       - name: Subir artefacto para Pages
         uses: actions/upload-pages-artifact@v3.0.1
