--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,78 +1,69 @@
+# Sample workflow for building and deploying a Hugo site to GitHub Pages
 name: Deploy Hugo site to Pages
 
 on:
   push:
     branches: [ master ]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
+# Default to bash
 defaults:
   run:
     shell: bash
 
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.115.1
     steps:
-      - name: Instalar Hugo CLI
+      - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-
-      - name: Instalar Dart Sass
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb          
+      - name: Install Dart Sass
         run: sudo snap install dart-sass
-
-      - name: Checkout del código
-        uses: actions/checkout@v4.2.1
-
-      - name: Configurar GitHub Pages
+      - name: Checkout
+        uses: actions/checkout@latest
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v5
-
-      - name: Cache de hugo_modules
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/hugo
-          key: ${{ runner.os }}-hugo-${{ env.HUGO_VERSION }}-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-hugo-${{ env.HUGO_VERSION }}-
-
-      - name: Cache de npm
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-
-      - name: Instalar dependencias Node.js
+        uses: actions/configure-pages@latest
+      - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-
-      - name: Construir con Hugo
+      - name: Build with Hugo
         env:
+          # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
-
-      - name: Subir artefacto para Pages
-        uses: actions/upload-pages-artifact@v3.0.1
+            --baseURL "${{ steps.pages.outputs.base_url }}/"          
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@latest
         with:
           path: ./public
 
+  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -80,6 +71,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Desplegar en GitHub Pages
+      - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4.0.5
+        uses: actions/deploy-pages@latest
